--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "laravel-mix": "^6.0.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.27.0"
+        "react-router-dom": "^6.27.0",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1"
     }
 }
