--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
+        "clsx": "^2.1.1",
         "laravel-mix": "^6.0.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
